--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>JIRA_TEST_POM</artifactId>
+    <artifactId>Jira_Glass_1.4_test</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <pluginManagement>
@@ -24,8 +24,8 @@
         </pluginManagement>
     </build>
     <properties>
-        <maven.compiler.source>1.11</maven.compiler.source>
-        <maven.compiler.target>1.11</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
