mvn compiler version

--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.8.1</version>
                     <configuration>
-                        <testSource>1.8</testSource>
-                        <testTarget>1.8</testTarget>
+                        <source>1.8</source>
+                        <target>1.8</target>
                     </configuration>
                 </plugin>
                 <plugin>
